feat: change validate token to a get endpoint
